Clase 26. Integrar el componente nieto en nuestra aplicación

--- a/02-redux-app/src/app/contador/hijo/hijo.component.html
+++ b/02-redux-app/src/app/contador/hijo/hijo.component.html
@@ -7,3 +7,11 @@
     <button class="btn btn-info" (click)="onDivide()">Dividir</button>
   </div>
 </div>
+
+<hr>
+
+<div class="row text-center">
+  <div class="col">
+    <app-nieto [contador]="contador" (resetCount)="resetCount($event)"></app-nieto>
+  </div>
+</div>
