--- a/02-redux-app/src/app/contador/nieto/nieto.component.html
+++ b/02-redux-app/src/app/contador/nieto/nieto.component.html
@@ -1,1 +1,5 @@
-<p>nieto works!</p>
+<h3>Contador</h3>
+<h5>{{ contador }}</h5>
+
+
+<button class="btn btn-danger" (click)="onReset()">Reset</button>
