--- a/02-redux-app/src/app/app.component.html
+++ b/02-redux-app/src/app/app.component.html
@@ -16,11 +16,11 @@
 
   <hr>
 
-  <div class="row text-center">
+  <!-- <div class="row text-center">
     <div class="col">
       <app-hijo [contador]="contador" (changeCount)="changeCount($event)"></app-hijo>
     </div>
-  </div>
+  </div> -->
 
 </div>
 
