--- a/03-todo-app/src/app/todos/todo-item/todo-item.component.html
+++ b/03-todo-app/src/app/todos/todo-item/todo-item.component.html
@@ -1,10 +1,24 @@
   <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
 
-  <li class="completed">
+  <li [ngClass]="{'completed': todo.completado,
+                  'editing': editando}">
+
     <div class="view">
-      <input class="toggle" type="checkbox" checked>
-      <label>Taste JavaScript</label>
+      <input
+        [formControl]="chkCompletado"
+        class="toggle"
+        type="checkbox">
+
+      <label (dblclick)="editar()">{{todo.texto}}</label>
+
       <button class="destroy"></button>
     </div>
-    <input class="edit" value="Create a TodoMVC template">
+
+    <input
+      #inputTexto
+      [formControl]="txtInput"
+      type="text"
+      class="edit"
+      (blur)="terminarEdicion()">
+
   </li>
