--- a/03-todo-app/src/app/todos/todo-item/todo-item.component.html
+++ b/03-todo-app/src/app/todos/todo-item/todo-item.component.html
@@ -11,7 +11,7 @@
 
       <label (dblclick)="editar()">{{todo.texto}}</label>
 
-      <button class="destroy"></button>
+      <button class="destroy" (click)="onDelete()"></button>
     </div>
 
     <input
