--- a/03-todo-app/src/app/todos/todo-footer/todo-footer.component.html
+++ b/03-todo-app/src/app/todos/todo-footer/todo-footer.component.html
@@ -1,19 +1,18 @@
   <!-- This footer should hidden by default and shown when there are todos -->
   <footer class="footer">
+
     <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> item left</span>
+    <span class="todo-count"><strong>0</strong> tareas pendientes</span>
+
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
-      <li>
-        <a class="selected" href="#/">All</a>
+      <li *ngFor="let filtro of filtros" (click)="onChangeFilter(filtro)">
+        <a href="#/" [ngClass]="{'selected': filtro === filtroActual}">{{filtro | titlecase}}</a>
       </li>
-      <li>
-        <a href="#/active">Active</a>
-      </li>
-      <li>
-        <a href="#/completed">Completed</a>
-      </li>
+
     </ul>
+
     <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Clear completed</button>
+    <button class="clear-completed">Limpiar filtro</button>
+
   </footer>
