Clase 55. Aplicar el filtro visualmente

--- a/03-todo-app/src/app/todos/todo-list/todo-list.component.html
+++ b/03-todo-app/src/app/todos/todo-list/todo-list.component.html
@@ -1,7 +1,7 @@
 <ul class="todo-list">
 
   <app-todo-item
-    *ngFor="let todo of todos"
+    *ngFor="let todo of todos | filtro: filtroActual"
     [todo]="todo">
   </app-todo-item>
 
