Clase 56. Borrar todos los TODO completados

--- a/03-todo-app/src/app/todos/todo-footer/todo-footer.component.html
+++ b/03-todo-app/src/app/todos/todo-footer/todo-footer.component.html
@@ -8,6 +8,6 @@
       </li>
     </ul>
 
-    <button class="clear-completed">Limpiar filtro</button>
+    <button class="clear-completed" (click)="onLimpiarCompletados()">Limpiar completados</button>
 
   </footer>
