--- a/04-ingresoEgreso-app/src/app/auth/login/login.component.html
+++ b/04-ingresoEgreso-app/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-4 mx-auto">
         <h2 class="text-center mb-4" style="color: white;">Ingresar</h2>
         <div class="auto-form-wrapper">
-          <form action="#">
+          <form>
             <div class="form-group">
               <label class="label">Usuario</label>
               <div class="input-group">
