--- a/04-ingresoEgreso-app/src/app/auth/login/login.component.html
+++ b/04-ingresoEgreso-app/src/app/auth/login/login.component.html
@@ -41,11 +41,21 @@
 
             <div class="form-group">
               <button
+              *ngIf="!cargando"
                 type="submit"
                 class="btn btn-primary submit-btn btn-block"
                 [disabled]="loginForm.invalid">
-              Login
-            </button>
+                Login
+              </button>
+
+              <button
+                *ngIf="cargando"
+                type="button"
+                class="btn btn-primary submit-btn btn-block"
+                [disabled]="true">
+                <i class="fa fa-spin fa-sync"></i>
+                Espere ...
+              </button>
             </div>
 
             <div class="text-block text-center my-3">
