--- a/04-ingresoEgreso-app/src/app/auth/register/register.component.html
+++ b/04-ingresoEgreso-app/src/app/auth/register/register.component.html
@@ -54,18 +54,31 @@
 
             <div class="form-group">
               <button
+                *ngIf="!cargando"
                 type="submit"
                 class="btn btn-primary submit-btn btn-block"
                 [disabled]="registerForm.invalid">
                 Crear cuenta
               </button>
+
+              <button
+                *ngIf="cargando"
+                type="button"
+                class="btn btn-primary submit-btn btn-block"
+                [disabled]="true">
+                <i class="fa fa-spin fa-sync"></i>
+                Espere ...
+              </button>
             </div>
+
             <div class="text-block text-center my-3">
               <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
               <br>
               <a routerLink="/login" class="text-black text-small">Login</a>
             </div>
+
           </form>
+
         </div>
       </div>
     </div>
