--- a/04-ingresoEgreso-app/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/04-ingresoEgreso-app/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -7,16 +7,26 @@
           Especifique el monto y el tipo
         </p>
 
-        <form>
+        <form [formGroup]="ingresoForm" (ngSubmit)="guardar()">
 
           <div class="form-group">
             <label>Descripción</label>
-            <input type="text" class="form-control" placeholder="Descripción" name="descripcion">
+            <input
+              formControlName="descripcion"
+              type="text"
+              class="form-control"
+              placeholder="Descripción"
+              name="descripcion">
           </div>
 
           <div class="form-group">
             <label>Monto</label>
-            <input type="number" class="form-control" placeholder="Monto" name="monto">
+            <input
+              formControlName="monto"
+              type="number"
+              class="form-control"
+              placeholder="Monto"
+              name="monto">
             <p>
               Debe de ser un monto positivo
             </p>
@@ -25,12 +35,28 @@
           <div class="form-group">
             <label>Tipo</label>
             <br>
-            <button type="button" class="btn btn-primary btn-block">Ingreso</button>
-            <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+            <button
+              *ngIf="tipo === 'ingreso'"
+              (click)="tipo = 'egreso'"
+              type="button"
+              class="btn btn-primary btn-block"
+              [disabled]="ingresoForm.invalid">
+              Ingreso
+          </button>
+            <button
+              *ngIf="tipo === 'egreso'"
+              (click)="tipo = 'ingreso'"
+              type="button"
+              class="btn btn-warning btn-block">
+              Egreso
+          </button>
           </div>
 
           <hr>
-          <button type="button" class="btn btn-success mr-2">
+          <button
+            type="submit"
+            class="btn btn-success mr-2"
+            [disabled]="ingresoForm.invalid">
             <i class="fa fa-save"></i>
             Agregar
           </button>
