--- a/04-ingresoEgreso-app/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/04-ingresoEgreso-app/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -54,6 +54,7 @@
 
           <hr>
           <button
+            *ngIf="!cargando"
             type="submit"
             class="btn btn-success mr-2"
             [disabled]="ingresoForm.invalid">
@@ -61,12 +62,13 @@
             Agregar
           </button>
 
-          <!--
-              <button disabled class="btn btn-success mr-2">
-                <i class="fa fa-spin fa-sync"></i>
-                Espere por favor...
-              </button>
-            -->
+          <button
+            *ngIf="cargando"
+            disabled
+            class="btn btn-success mr-2">
+            <i class="fa fa-spin fa-sync"></i>
+            Guardando...
+          </button>
 
           <button type="reset" class="btn btn-light">Cancelar</button>
 
