--- a/04-ingresoEgreso-app/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/04-ingresoEgreso-app/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -15,16 +15,23 @@
           </thead>
 
           <tbody>
-            <tr>
-              <td>Descripción</td>
-              <td>Monto</td>
-              <td>Tipo</td>
-              <td>acciones</td>
+            <tr *ngFor="let item of ingresosEgresos">
+              <td>{{item.description}}</td>
+              <td>{{item.monto | currency}}</td>
+              <td [ngClass]="{'text-success': item.tipo === 'ingreso',
+                              'text-danger': item.tipo === 'egreso'}">
+                {{item.tipo | titlecase}}
+              </td>
+              <td>
+                <button (click)="onDelete(item.uid)" type="button" class="btn btn-danger">
+                  <i class="fa fa-trash"></i>
+                  Borrar
+                </button>
+              </td>
             </tr>
           </tbody>
 
         </table>
-
 
       </div>
     </div>
