Clase 110. Chart.js - Gráficas para Angular

--- a/04-ingresoEgreso-app/src/app/ingreso-egreso/estadistica/estadistica.component.html
+++ b/04-ingresoEgreso-app/src/app/ingreso-egreso/estadistica/estadistica.component.html
@@ -77,7 +77,13 @@
       <div class="card-body">
         <h1 class="card-title">Gráfica</h1>
 
-        <!-- gráfica ira aquí­ -->
+        <div style="display: block">
+          <canvas baseChart
+            [data]="doughnutChartData"
+            [labels]="doughnutChartLabels"
+            [chartType]="doughnutChartType">
+          </canvas>
+        </div>
 
       </div>
     </div>
