--- a/05-http-effects/src/app/usuarios/lista/lista.component.html
+++ b/05-http-effects/src/app/usuarios/lista/lista.component.html
@@ -1,1 +1,14 @@
-<p>lista works!</p>
+<div class="card-columns">
+
+  <div class="card" *ngFor="let usuario of usuarios">
+    <img [src]="usuario.avatar" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{usuario.first_name}} {{usuario.last_name}}</h5>
+      <p class="card-text">{{usuario.email}}</p>
+      <p class="card-text">
+        <span class="text-muted">ID: {{usuario.id}}</span>
+      </p>
+    </div>
+  </div>
+
+</div>
