--- a/05-http-effects/src/app/usuarios/usuario/usuario.component.html
+++ b/05-http-effects/src/app/usuarios/usuario/usuario.component.html
@@ -1,1 +1,15 @@
-<p>usuario works!</p>
+<div class="row">
+
+  <div class="col-4">
+    <img [src]="user.avatar" alt="avatar" class="img-thumbail">
+  </div>
+
+  <div class="col">
+    <ul class="list-group">
+      <li class="list-group-item"> <b>Nombre: </b> {{ user.first_name }} </li>
+      <li class="list-group-item"> <b>Apellido:</b> {{ user.last_name }} </li>
+    </ul>
+
+  </div>
+
+</div>
